[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/Player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://LaserTag.tscn" type="PackedScene" id=2]
[ext_resource path="res://world_test_delete.gd" type="Script" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 370, 683 )

[node name="LaserTag" parent="." instance=ExtResource( 2 )]
position = Vector2( 368, 536 )

[node name="Power_Ups_spawn" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="spawn_laser" from="Player1" to="." method="_on_Player1_spawn_laser"]
[connection signal="timeout" from="Power_Ups_spawn" to="." method="_on_Power_Ups_spawn_timeout"]
